@@ -2,6 +2,7 @@ MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-andr
 
 Version v.Next
 ----------
+- Allow Broker apps to obtain an RT associated to Broker's client ID (for WPJ).
 - Moved broker controller and strategy classes to common for MSALCPP brokered auth.
 - Removed 'defaultAuthority' param from TokenShareUtility; MSA RT ingestion always uses WW-/consumers.
 
